--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </header>
 
       <main>
-        <main>
+        <div class="blog-post">
           <div class="main-header">
             <img src="./assets/images/header.svg" alt="" />
           </div>
@@ -47,49 +47,107 @@
           <div class="main-content">
             <p>
               Os gatos são animais fascinantes e cercados de mistérios. De
-              temperamento independente e misterioso, esses felinos são
-              conhecidos por sua agilidade, elegância e um comportamento muitas
-              vezes imprevisível. Contudo, recentemente, uma teoria tem ganhado
-              espaço na internet e entre teóricos de conspiração: seriam os
-              gatos astronautas? A teoria sugere que os gatos não são animais
-              terrestres, mas sim seres extraterrestres enviados para realizar
-              uma missão específica em nosso planeta. Há relatos históricos que
-              apontam para o fato de que os gatos eram considerados seres
-              sagrados em diferentes culturas e até mesmo associados a figuras
-              divinas. Isso poderia indicar que os gatos têm uma origem muito
-              mais mística do que se pensava anteriormente. Além disso, há
-              teóricos que acreditam que os felinos possuem habilidades
-              telepáticas e são capazes de se comunicar com outras espécies
-              alienígenas. Essa crença baseia-se em relatos de pessoas que
-              afirmam terem visto gatos reagindo a estímulos que não são
+              temperamento independente e misterioso, esses felinos são conhecidos
+              por sua agilidade, elegância e um comportamento muitas vezes
+              imprevisível. Contudo, recentemente, uma teoria tem ganhado espaço
+              na internet e entre teóricos de conspiração: seriam os gatos
+              astronautas?<br /><br />
+              A teoria sugere que os gatos não são animais terrestres, mas sim
+              seres extraterrestres enviados para realizar uma missão específica
+              em nosso planeta. Há relatos históricos que apontam para o fato de
+              que os gatos eram considerados seres sagrados em diferentes culturas
+              e até mesmo associados a figuras divinas. Isso poderia indicar que
+              os gatos têm uma origem muito mais mística do que se pensava
+              anteriormente.<br /><br />
+              Além disso, há teóricos que acreditam que os felinos possuem
+              habilidades telepáticas e são capazes de se comunicar com outras
+              espécies alienígenas. Essa crença baseia-se em relatos de pessoas
+              que afirmam terem visto gatos reagindo a estímulos que não são
               perceptíveis aos seres humanos, ou até mesmo se comportando de
               maneira incomum durante eventos astronômicos, como uma aurora
               boreal. Esses e outros indícios foram interpretados como sinais de
               que os gatos seriam seres interplanetários.
             </p>
           </div>
+        </div>
 
-          <div class="related-articles">
+        <div class="related-articles">
+          <h2>Artigos Relacionados</h2>
+          <ul>
             <li>
-              <ul>
-                <div class="card">
-                  <img src="./assets/images/cat1.svg" alt="" />
-                  
-                  <div class="article-info">
-                    <h2>Sábado Preguiçoso</h2>
-                    <p>
-                      Descubra atividades interessantes para fazer com seu pet
-                      durante os finais de semana
-                    </p>
-                  </div>
+              <div class="card">
+                <img src="./assets/images/cat1.svg" alt="" />
+
+                <div class="article-info">
+                  <h3>Sábado Preguiçoso</h3>
+                  <p>
+                    Descubra atividades interessantes para fazer com seu pet
+                    durante os finais de semana
+                  </p>
                 </div>
-              </ul>
+              </div>
             </li>
-          </div>
-        </main>
+
+            <li>
+              <div class="card">
+                <img src="./assets/images/cat2.svg" alt="" />
+
+                <div class="article-info">
+                  <h3>Balaio de Gatos</h3>
+                  <p>
+                    Como evitar confusões entre seus gatíneos e acostumá-los
+                    desde filhotes.
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="card">
+                <img src="./assets/images/cat3.svg" alt="" />
+
+                <div class="article-info">
+                  <h3>Cartela de cores</h3>
+                  <p>
+                    Seu gato é inverno intenso? Verão profundo? Descubra as
+                    cores que mais combinam com seu bichano.
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="card">
+                <img src="./assets/images/cat4.svg" alt="" />
+
+                <div class="article-info">
+                  <h3>Os gatos sentem frio?</h3>
+                  <p>
+                    Preparem-se para a frente fria que vem para o país da melhor
+                    maneira possível.
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="card">
+                <img src="./assets/images/cat5.svg" alt="" />
+
+                <div class="article-info">
+                  <h3>Conheça o Moacir</h3>
+                  <p>
+                    Moacir é o gatinho da semana do nosso blog. Venha conhecer
+                    sua história de superação.
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </main>
 
-      <footer>Footer</footer>
+      <footer><p>© 2023 - Rocketseat Explorer</p></footer>
     </div>
   </body>
 </html>
